home/containers/kubernetes/tasket_kubernetes_containers/task_041__gcp_k8s__nginx_ingress/base/app/svc_whoami.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
  namespace: ingress-nginx-ext
spec:
  selector:
    app: whoami
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
