home/containers/kubernetes/tasket_kubernetes_containers/task_041__gcp_k8s__nginx_ingress/base/app/ingress_whoami.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  namespace: ingress-nginx-ext
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/whoami"
        backend:
          service:
            name: whoami-service
            port:
              number: 80
